<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.unimelbit.teamcobalt.tourlist.Home.RegisterFragment">

    <ImageView
        android:id="@+id/imageView5"
        style="@style/orangeBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        app:srcCompat="@mipmap/morangelogo"
        style="@style/circleWhiteBackground"
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:padding="15dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="8dp"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.19999999" />

    <EditText
        android:id="@+id/login_username_field"
        style="@style/editText_style"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName"
        android:padding="4dp"
        app:layout_constraintBottom_toTopOf="@+id/login_password_field"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/login_password_field"
        style="@style/editText_style"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="4dp"
        app:layout_constraintBottom_toTopOf="@+id/button_login"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="@+id/imageView5"
        app:layout_constraintRight_toRightOf="@+id/imageView5" />

    <Button
        android:id="@+id/button_login"
        style="@style/button_style_b"
        android:layout_width="wrap_content"
        android:layout_marginTop="0dp"
        android:elevation="24dp"
        android:text="Login"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

</android.support.constraint.ConstraintLayout>
