...
        android:layout_marginStart="16dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/gen_chat_button"
        app:layout_constraintHorizontal_bias="0.501" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

    <Button
        android:id="@+id/gen_chat_button"
        style="@style/button_style_od"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="GENERAL CHAT"
        android:padding="8dp"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
...
