...
        android:id="@+id/linearLayout4"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView6">

        <Button
            android:id="@+id/go_to_login_fragment"
            style="@style/button_style_b"
            android:layout_margin="8dp"
            android:elevation="24dp"
            android:gravity="center"
            android:text="login" />

...
