<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Home"
            android:title="Home" />
        <item
            android:id="@+id/nav_Profile"
            android:title="Profile" />
        <item
            android:id="@+id/nav_Trips"
            android:title="My Trips" />
        <item
            android:id="@+id/nav_search"
            android:title="Search" />
        <item
            android:id="@+id/nav_create"
            android:title="Create A Trip" />
        <item
            android:id="@+id/nav_chat_rooms"
            android:title="Chat rooms" />

        <item
            android:id="@+id/nav_logout"
            android:title="Logout" />

    </group>

</menu>
