<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.unimelbit.teamcobalt.tourlist.Home.HomeFragment"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp"
    app:layout_constraintDimensionRatio="W,1:1">

    <!-- TODO: Update blank fragment layout -->

    <!--
    <fragment
        android:id="@+id/map"
        android:layout_width="366dp"
        android:layout_height="84dp" /> -->

    <ImageView
        android:id="@+id/imageView6"
        app:srcCompat="@mipmap/morange"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:padding="15dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.021" />

    <Button
        android:id="@+id/myTripButton"
        style="@style/background_ol"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="MY TRIPS"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37" />

    <LinearLayout android:layout_width="0dp"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:id="@+id/linearLayout3"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/myTripButton"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <Button
            android:id="@+id/createButtonMain"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight=".40"
            android:text="CREATE TRIP"
            style="@style/background_b"/>

        <Button
            android:id="@+id/searchButtonMain"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight=".60"
            android:text="SEARCH TRIP"
            style="@style/background_od"/>
    </LinearLayout>

    <Button
        android:id="@+id/generalChat"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="7dp"
        android:text="CHAT ROOMS"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp"
        style="@style/background_g"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"/>

</android.support.constraint.ConstraintLayout>
