<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.unimelbit.teamcobalt.tourlist.TripDetails.ChatFragment">


    <Button
        android:id="@+id/button_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="start chatting"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="31dp"
        style="@style/button_style"
        android:padding="7dp"/>

    <TextView
        android:id="@+id/textViewUserList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/userListChat"
        android:layout_alignStart="@+id/userListChat"
        android:text="Users in this trip:"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="157dp"
        android:gravity="center_horizontal"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/chatFragmentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="Title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintHorizontal_bias="0.502" />

    <TextView
        android:id="@+id/chatFragmentDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Info about trip"
        android:layout_below="@+id/chatFragmentTitle"
        android:layout_centerHorizontal="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginTop="41dp"
        app:layout_constraintTop_toBottomOf="@+id/chatFragmentTitle"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintHorizontal_bias="0.501" />

    <ListView
        android:id="@+id/userListChat"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_above="@+id/button_chat"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"
        android:layout_marginEnd="42dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/border"
        app:layout_constraintBottom_toTopOf="@+id/button_chat"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUserList"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

    </ListView>

</android.support.constraint.ConstraintLayout>
