...
        android:id="@+id/Search_button"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="19dp"
        android:text="Search"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/Random_button"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@+id/Search_input"
        app:layout_constraintHorizontal_bias="0.305"
...
        android:layout_marginBottom="212dp" />

    <Button
        android:id="@+id/Random_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="I'm feeling adventurous"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:padding="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
...
